--- a/index.html
+++ b/index.html
@@ -12,42 +12,43 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">French by definition</a>
-      <div class="text-dark" id="score"></div>
-    </div>
-  </nav>
-
-  <div class="container-fluid">
+  <div class="container-fluid vh-100">
     <div class="row justify-content-center">
-      <div class="col-lg-5 p-4">
-        <div class="row justify-content-center">
-          <div>
-            <div id="definition" class="fs-1 mb-2 fw-semibold my-auto d-flex align-items-center" style="min-height: 300px;"></div>
-
-            <!-- <div class="text-white lead mb-5">Provide the French noun or verb for this French definition.</div> -->
-            <input id="input" class="form-control mb-3", autocomplete="off" placeholder="Your response">
-
-            <div class="d-flex justify-content-end gap-3">
-              <button id="show", class="d-block btn btn-outline-light", style="cursor:pointer;">dis moi</button>
-              <button id="skip", class="d-block btn btn-danger", style="cursor:pointer;">je sais pas</button>
-              <button id="submit", class="btn", style="background-color:#b8e994";>je sais</button>
-            </div>
+      <div class="col-lg-5 p-4 h-100 d-grid">
+        <div class="display-1 fw-lighter mb-2">French by definition</div>
+        <p>Type the correct French verb or noun to match the definition.</p>
+        <div class="border-top pt-2">
+          <div class="row mb-2">
+            <div class="col" id="word"></div>
+            <div class="col d-flex justify-content-end text-white" id="score"></div>
           </div>
-          <div class="border-top row mx-auto pt-3 mt-5">
-            <input class="d-none" type="checkbox" id="translateToggle">
-            <label class="form-label text-center fw-lighter" for="translateToggle" style="cursor:pointer;">English</label>
+          <div id="definition" class="fs-1 mb-2 fw-semibold my-auto d-flex align-items-center" style="height: 130px"></div>
+          <div class="form">
+            <div class="input-group mb-3">
+              <input id="input" type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+              <button id="submit" class="btn btn-success" type="button" id="button-addon1">ok</button>
+            </div>
+
+            <div class="mt-3 d-grid d-lg-flex gap-3">
+              <div>
+                <input class="d-none" type="checkbox" id="wordToggle">
+                <label id="show" class="btn btn-outline-light w-100" for="wordToggle" style="cursor:pointer;">montrer</label>
+              </div>
+
+              <!-- ENGLISH TRANSLATION -->
+              <!-- <div>
+                <input class="d-none checkbox", class="btn-check-5" type="checkbox" id="translateToggle">
+                <label class="btn btn-outline-light w-100" for="translateToggle" style="cursor:pointer;">english</label>
+              </div> -->
+
+              <button class="btn btn-outline-light" id="skip">passer</button>
+            </div>
           </div>
         </div>
       </div>
-      <div 
-    </div>
-
-    <div class="row justify-content-center mt-5">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
