--- a/index.html
+++ b/index.html
@@ -19,29 +19,21 @@
         <p>Type the correct French verb or noun to match the definition.</p>
         <div class="border-top pt-2">
           <div class="row mb-2">
-            <div class="col" id="word"></div>
             <div class="col d-flex justify-content-end text-white" id="score"></div>
           </div>
-          <div id="definition" class="fs-1 mb-2 fw-semibold my-auto d-flex align-items-center" style="height: 130px"></div>
-          <div class="form">
-            <div class="input-group mb-3">
-              <input id="input" type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
-              <button id="submit" class="btn btn-success" type="button" id="button-addon1">ok</button>
+          <div id="definition" class="fs-1 mb-2 fw-semibold my-auto" style="min-height: 130px"></div>
+          <div class="form mt-3" id="form">
+            <input id="input" type="text" autocomplete="off" class="form-control mb-3" placeholder="votre réponse" aria-label="Example text with button addon" aria-describedby="button-addon1">
             </div>
 
-            <div class="mt-3 d-grid d-lg-flex gap-3">
-              <div>
-                <input class="d-none" type="checkbox" id="wordToggle">
-                <label id="show" class="btn btn-outline-light w-100" for="wordToggle" style="cursor:pointer;">montrer</label>
+            
+            <div class="mt-3 d-grid d-lg-flex justify-content-lg-end gap-3 w-100">
+              
+              <div class="d-flex gap-3 w-100">
+                <button data-show="false" class="btn btn-outline-light w-100" id="wordToggle">montrer</button>
+                <button class="btn btn-danger w-100" id="skip">passer</button>
+                <button id="submit" class="btn btn-success d-none w-100" type="button" id="button-addon1">continue</button>
               </div>
-
-              <!-- ENGLISH TRANSLATION -->
-              <!-- <div>
-                <input class="d-none checkbox", class="btn-check-5" type="checkbox" id="translateToggle">
-                <label class="btn btn-outline-light w-100" for="translateToggle" style="cursor:pointer;">english</label>
-              </div> -->
-
-              <button class="btn btn-outline-light" id="skip">passer</button>
             </div>
           </div>
         </div>
