--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container-fluid vh-100">
+  <div class="px-4 py-5 my-5">
     <div class="row justify-content-center">
       <div class="col-lg-5 p-4 h-100 d-grid">
         <div class="display-1 fw-lighter mb-2">French by definition</div>
@@ -23,7 +23,7 @@
           </div>
           <div id="definition" class="fs-1 mb-2 fw-semibold my-auto" style="min-height: 130px"></div>
           <div class="form mt-3" id="form">
-            <input id="input" type="text" autocomplete="off" class="form-control mb-3" placeholder="votre réponse" aria-label="Example text with button addon" aria-describedby="button-addon1">
+            <input id="input" type="text" autocomplete="off" class="form-control mb-4" placeholder="votre réponse" aria-label="Example text with button addon" aria-describedby="button-addon1">
             </div>
 
             
@@ -32,7 +32,7 @@
               <div class="d-flex gap-3 w-100">
                 <button data-show="false" class="btn btn-outline-light w-100" id="wordToggle">montrer</button>
                 <button class="btn btn-danger w-100" id="skip">passer</button>
-                <button id="submit" class="btn btn-success d-none w-100" type="button" id="button-addon1">continue</button>
+                <button id="submit" class="btn btn-info d-none w-100" type="button" id="button-addon1">continue</button>
               </div>
             </div>
           </div>
